<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:orientation="vertical"
    android:background="@drawable/gradation_hello"
    android:gravity="center"
    tools:ignore="MissingPrefix">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/image_description"
        android:src="@mipmap/ic_yedang" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        fontPath="fonts/NanumSquareEB.ttf"
        android:textSize="40sp"
        android:text="@string/welcome"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        fontPath="fonts/NanumSquareL.ttf"
        android:textAlignment="center"
        android:text="@string/intro1"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

</LinearLayout>
