<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:ignore="MissingPrefix">

    <RelativeLayout
        android:id="@+id/mUpdateLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:padding="8dp"
        android:paddingBottom="8dp"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        tools:ignore="RtlSymmetry">

        <TextView
            android:id="@+id/mCalender"
            fontPath="fonts/NanumSquareB.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_calendar"
            android:textColor="@android:color/white"
            android:layout_centerHorizontal="true"
            android:textSize="20sp"
            tools:ignore="RtlSymmetry" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/mWidgetLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true">

            <TextView
                android:id="@+id/mLunchTitle"
                fontPath="fonts/NanumSquareL.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/lunch_kr"
                android:textColor="@color/colorPrimary"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/mLunch"
                fontPath="fonts/NanumSquareR.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="3dp"
                android:text="@string/widget_no_data"
                android:textColor="@android:color/black"
                android:textSize="17sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/lunch_kcal"
            fontPath="fonts/NanumSquareL.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:padding="5dp"
            android:text="@string/sample_kcal"
            android:textColor="@color/textSecondary"
            android:textSize="14sp" />

    </RelativeLayout>

</LinearLayout>
