<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:layout_marginBottom="16dp"
    android:layout_marginTop="16dp"
    android:gravity="center_horizontal">

    <android.support.v7.widget.CardView
        android:id="@+id/parent_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?android:selectableItemBackground"
        android:orientation="vertical"
        android:padding="15dp"
        app:cardUseCompatPadding="true"
        card_view:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="MissingPrefix">

            <android.support.v7.widget.CardView
                android:id="@+id/title_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?android:selectableItemBackground"
                android:orientation="vertical"
                app:cardElevation="0dp"
                card_view:cardCornerRadius="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp"
                    android:paddingBottom="8dp"
                    android:paddingEnd="8dp"
                    android:paddingStart="8dp"
                    tools:ignore="MissingPrefix,RtlSymmetry">

                    <TextView
                        android:id="@+id/day_of_the_week"
                        fontPath="fonts/NanumSquareEB.ttf"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignStart="@+id/calender"
                        android:gravity="start"
                        android:textColor="@android:color/white"
                        android:textSize="16sp"
                        tools:ignore="RtlSymmetry"
                        tools:text="@string/sample_day_of_the_week" />

                    <TextView
                        android:id="@+id/calender"
                        fontPath="fonts/NanumSquareB.ttf"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/day_of_the_week"
                        android:text="@string/sample_calendar"
                        android:textColor="@android:color/white"
                        android:textSize="14sp"
                        tools:ignore="RtlSymmetry" />

                    <TextView
                        android:id="@+id/today"
                        fontPath="fonts/BreezeSans-Bold.ttf"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerInParent="false"
                        android:layout_centerVertical="true"
                        android:gravity="end"
                        android:text="@string/today"
                        android:textColor="@android:color/white"
                        android:textSize="16sp"
                        tools:ignore="RelativeOverlap,RtlSymmetry" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="250dp"
                android:orientation="vertical"
                card_view:cardBackgroundColor="#ffffff"
                card_view:cardCornerRadius="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    tools:ignore="MissingPrefix">

                    <TextView
                        fontPath="fonts/NanumSquareL.ttf"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="15dp"
                        android:gravity="center"
                        android:text="@string/lunch_kr"
                        android:textColor="@color/colorPrimary"
                        android:textSize="22sp" />

                    <TextView
                        fontPath="fonts/NanumSquareR.ttf"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center"
                        android:text="@string/lunch"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/lunch"
                        fontPath="fonts/NanumSquareR.ttf"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="15dp"
                        android:layout_marginTop="15dp"
                        android:gravity="center"
                        android:textColor="@android:color/black"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/lunch_kcal"
                        fontPath="fonts/NanumSquareL.ttf"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="15dp"
                        android:textColor="@color/textSecondary"
                        android:textSize="14sp" />

                </LinearLayout>

            </android.support.v7.widget.CardView>


        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
